--- a/.ipynb
+++ b/.ipynb
@@ -5,7 +5,7 @@ role = get_execution_role()
 
 estimator = TensorFlow(
     entry_point="train.py",
-    source_dir="olgertlm",
+    source_dir=".",
     dependencies=["requirements.txt"],
     role=role,
     instance_count=1,
@@ -15,7 +15,7 @@ estimator = TensorFlow(
     script_mode=True,
     output_path="s3://sagemaker-olgertlm/output",
     hyperparameters={
-        "DATA_PATH": "datasets/big.txt",
+        "DATA_PATH": "./datasets/big.txt",
         "MAXLEN": 20,
         "NUM_LAYERS": 2,
         "EMBED_DIM": 64,
@@ -23,8 +23,8 @@ estimator = TensorFlow(
         "FF_DIM": 128,
         "EPOCHS": 500,
         "BATCH_SIZE": 4,
-        "LOCAL_CHECKPOINT_DIR": "./checkpoints",
-        "SAVED_MODEL_PATH": "./saved",
+        "LOCAL_CHECKPOINT_DIR": "/opt/ml/model/checkpoints",
+        "SAVED_MODEL_PATH": "/opt/ml/model/saved",
         "SAVED_MODEL_PATH_FULL": "/opt/ml/model/gpt.weights.keras",
     },
 )
