--- a/start.ipynb
+++ b/start.ipynb
@@ -9,9 +9,9 @@ estimator = TensorFlow(
     dependencies=["requirements.txt"],
     role=role,
     instance_count=1,
-    instance_type="ml.g4dn.xlarge",
-    framework_version="2.19.0",
-    py_version="3.11.11",
+    instance_type="ml.m4.xlarge",
+    framework_version="2.18.0",
+    py_version="py310",
     script_mode=True,
     output_path="s3://sagemaker-olgertlm/output",
     hyperparameters={
@@ -23,9 +23,12 @@ estimator = TensorFlow(
         "FF_DIM": 128,
         "EPOCHS": 500,
         "BATCH_SIZE": 4,
-        "LOCAL_CHECKPOINT_DIR": "/opt/ml/model/checkpoints",
-        "SAVED_MODEL_PATH": "/opt/ml/model/saved",
-        "SAVED_MODEL_PATH_FULL": "/opt/ml/model/gpt.weights.keras",
+        "CHECKPOINT_DIR" : "./artifacts/model/checkpoints",
+        "SAVE_CHECKPOINT_DIR" : "/opt/ml/model/artifacts/model/checkpoints",
+        "MODEL_DIR" : "./artifacts/model",
+        "SAVED_MODEL_DIR" : "/opt/ml/model/artifacts/model",
+        "TOKENIZER_DIR" : "./artifacts/tokenizer",
+        "SAVE_TOKENIZER_DIR" : "/opt/ml/modelartifacts/tokenizer",
     },
 )
 
