--- a/start.ipynb
+++ b/start.ipynb
@@ -29,6 +29,7 @@ estimator = TensorFlow(
         "SAVED_MODEL_DIR" : "/opt/ml/model/artifacts/model",
         "TOKENIZER_DIR" : "./artifacts/tokenizer",
         "SAVE_TOKENIZER_DIR" : "/opt/ml/modelartifacts/tokenizer",
+        "IS_SAGEMAKER" : "true",
     },
 )
 
